# karukan

./: CLAUDE.md  Cargo.toml
.github/workflows/: upstream-sync.yml
karukan-cli/: Cargo.toml
karukan-engine/: Cargo.toml
karukan-engine/src/: dict.rs  learning.rs
karukan-engine/src/kanji/: hf_download.rs  llamacpp.rs
karukan-engine/src/romaji/: converter.rs
karukan-fcitx5/fcitx5-addon/src/: karukan.cpp
karukan-fcitx5/include/: karukan.h
karukan-fcitx5/src/ffi/: mod.rs  query.rs  tests.rs
karukan-im/: Cargo.toml  README.md
karukan-im/config/: default.toml
karukan-im/src/config/: settings.rs
karukan-im/src/core/: candidate.rs  preedit.rs
karukan-im/src/core/engine/: conversion.rs  cursor.rs  display.rs  init.rs  input.rs  mod.rs  mode.rs  types.rs
karukan-im/src/core/engine/tests/: alphabet.rs  conversion.rs  cursor.rs  emoji.rs  learning.rs  live_conversion.rs  mod.rs  mode_toggle.rs  rewriter.rs
karukan-im/src/ffi/: mod.rs  tests.rs
karukan-im/src/server/: tests.rs
karukan-macos/Sources/KarukanIME/: EngineClient.swift  KarukanInputController.swift
